# tangerine-voice

./: README.md
.github/workflows/: windows-build.yml
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx  OverlayApp.tsx  app.css  main.tsx  overlay-main.tsx  styles.css  theme.ts
app/src-tauri/: Cargo.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  audio_capture.rs  history.rs  lib.rs  pipeline.rs  recordings.rs  request_log.rs  settings.rs  state.rs  windows_apps.rs
app/src-tauri/src/audio_mute/: macos.rs  mod.rs  stub.rs  windows.rs
app/src-tauri/src/commands/: config.rs  llm.rs  mod.rs  overlay.rs  recording.rs  settings.rs  windows.rs
app/src-tauri/src/llm/: anthropic.rs  defaults.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs
app/src-tauri/src/stt/: deepgram.rs  groq.rs  mod.rs  openai.rs
app/src-tauri/src/tests/: benchmarks.rs  hotkey_config_tests.rs  settings_commands_tests.rs  shortcut_tests.rs  stt_integration_tests.rs
app/src/components/: HintSelect.tsx  HistoryFeed.tsx  HotkeyInput.tsx  LogJsonModal.tsx  LogsView.tsx
app/src/components/settings/: ApiKeysSettings.tsx  AudioSettings.tsx  HotkeySettings.tsx  ProgramsModal.tsx  PromptSectionEditor.tsx  PromptSettings.tsx  ProvidersSettings.tsx  UiSettings.tsx
app/src/lib/: accentColor.ts  modelOptions.ts  queries.ts  tauri.ts  useRecordingPlayer.ts
app/src/stores/: recordingStore.ts
app/src/types/: mantine-code-highlight.d.ts
docs/: ADDING_PROVIDERS_AND_MODELS.md
