[package]
name = "tambourine-voice"
version = "0.1.0"
description = "Customizable AI-powered voice dictation tool"
license = "AGPL-3.0"
authors = ["kstonekuan"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tambourine_voice_lib"

[features]
default = []
# Enable local Whisper STT (requires whisper.cpp build dependencies)
local-whisper = ["dep:whisper-rs", "dep:dirs"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [
    "tray-icon",
    "macos-private-api",
    "image-png",
] }
tauri-utils = "2.8.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"

# Keyboard automation
enigo = "0.6.1"
arboard = "3.6.1"

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }  # CancellationToken

# Settings and history
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Audio playback
rodio = { version = "0.21.1", default-features = false, features = [
    "mp3",
    "playback",
] }
env_logger = "0.11.8"

# Audio capture
cpal = "0.15"
hound = "3.5"  # WAV encoding

# Voice Activity Detection
webrtc-vad = "0.4"
rubato = "0.15"  # High-quality audio resampling

# Local Whisper (whisper.cpp bindings) - Optional feature
whisper-rs = { version = "0.14", optional = true }
dirs = { version = "6.0", optional = true }  # For model storage paths

# HTTP client for STT/LLM API calls
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Base64 encoding for audio data
base64 = "0.22"

# Async utilities
async-trait = "0.1"

# Error handling
thiserror = "2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

# Windows audio control (WASAPI)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Devices",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Variant",
] }

# macOS audio control (CoreAudio) and NSPanel for overlay
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-audio = "0.3.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
